--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   font_awesome_flutter: ^10.3.0
-  google_fonts: 4.0.1
+  google_fonts: ^6.2.1
   shared_preferences: ^2.2.3
   go_router: 6.0.2
   flutter_riverpod: ^2.5.1
@@ -45,7 +45,16 @@ dependencies:
   firebase_storage: ^12.1.0
   cloud_firestore: ^5.0.2
   cloud_functions: ^5.0.1
-
+  animated_emoji: ^3.1.0
+  flex_color_scheme: ^7.3.1
+  curved_navigation_bar: ^1.0.6 #latest version
+  faker: 2.1.0
+  lottie: ^3.1.2
+  image_picker: ^1.1.2
+  timeago: ^3.7.0
+  shimmer: ^3.0.0
+  animations: 2.0.7
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +79,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
